Add ceilidh mini-game and integrate icons across UI

--- a/highland-cow-farm/index.html
+++ b/highland-cow-farm/index.html
@@ -56,7 +56,7 @@
         </div>
         <details class="howto" id="title-howto">
           <summary>How to Play</summary>
-          <p>Each day you will complete three brisk mini-games: keep runaway cows safe, match the right feed, and brush away the burrs. Happy cows grant more rewards. Watch the chonk level – a little extra fluff is adorable, but too much means slower cows tomorrow!</p>
+          <p>Each day you will complete four brisk mini-games: keep runaway cows safe, match the right feed, brush away the burrs, and lead a lively ceilidh dance. Happy cows grant more rewards. Watch the chonk level – a little extra fluff is adorable, but too much means slower cows tomorrow!</p>
         </details>
         <button class="danger" id="btn-reset">Reset Save</button>
       </div>
@@ -106,7 +106,7 @@
       </header>
       <details class="howto">
         <summary>How to Play</summary>
-        <p>Complete the three mini-games in any order given. Keep an eye on the timer and the mood of each cow. Feeding a cow more than once in Food Frenzy makes them extra chonky. Finish all tasks to unlock a surprise for the farm.</p>
+          <p>Complete the four mini-games in any order given. Keep an eye on the timer and the mood of each cow. Feeding a cow more than once in Food Frenzy makes them extra chonky. Finish all tasks to unlock a surprise for the farm.</p>
       </details>
       <section>
         <h3>Herd</h3>
@@ -179,7 +179,7 @@
             <h2 id="task-heading">Task Rush</h2>
             <p class="mini-subtitle" id="mini-subtitle"></p>
           </div>
-          <div class="badge" id="mini-badge">Mini 1 of 3</div>
+          <div class="badge" id="mini-badge">Mini 1 of 4</div>
           <div class="task-timer" id="task-timer" aria-live="assertive">00:30</div>
         </div>
         <div class="mini-instruction" id="mini-instruction">Stay tuned...</div>
