Add family challenge mode and co-op tracking

--- a/highland-cow-farm/index.html
+++ b/highland-cow-farm/index.html
@@ -93,6 +93,10 @@
           <label for="toggle-reduced">Reduce flashing effects</label>
           <input type="checkbox" id="toggle-reduced" />
         </div>
+        <div class="toggle">
+          <label for="toggle-family-challenge">Family Challenge mode</label>
+          <input type="checkbox" id="toggle-family-challenge" />
+        </div>
       </div>
       <div class="button-row">
         <button class="secondary" id="btn-options-back">Back</button>
@@ -116,6 +120,7 @@
       <section class="farm-meta">
         <article class="farm-panel">
           <h3>Daily Moodlets</h3>
+          <div class="challenge-status" id="family-challenge-status" hidden></div>
           <ul class="event-list" id="farm-events"></ul>
         </article>
         <article class="farm-panel">
